kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.example.com"
      allowedRoutes:
        namespace:
          from: "All"
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.example.com"
      allowedRoutes:
        namespace:
          from: "All"
      tls:
        mode: Terminate
        certificateRef:
          - name: example-tls
            kind: Secret
            group: ""
      addresses:
        - type: NamedAddress
          value: static-ip-example
