kubernetes/http-redirect.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: http-redirect
  namespace: gateway
spec:
  parentRefs:
  - name: gateway
    namespace: gateway
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
