kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: 
spec:
  hostnames:
    - "demo.example.com"
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: https
  rules:
  - matches:
    - path: 
        value: /
    backendRefs:
    - name: nginx
      port: 80
  - matches:
    - path:
        value: /api
    backendRefs:
    - name: api
      port: 443
